log/build_2022-10-08_07-00-11/state_reader/stdout_stderr.log
running egg_info
writing ../../build/state_reader/state_reader.egg-info/PKG-INFO
writing dependency_links to ../../build/state_reader/state_reader.egg-info/dependency_links.txt
writing entry points to ../../build/state_reader/state_reader.egg-info/entry_points.txt
writing requirements to ../../build/state_reader/state_reader.egg-info/requires.txt
writing top-level names to ../../build/state_reader/state_reader.egg-info/top_level.txt
reading manifest file '../../build/state_reader/state_reader.egg-info/SOURCES.txt'
writing manifest file '../../build/state_reader/state_reader.egg-info/SOURCES.txt'
running build
running build_py
running install
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
running install_lib
byte-compiling /workspace/BMI/install/state_reader/lib/python3.10/site-packages/state_reader/psychopy_presenter_2D_interception_semi.py to psychopy_presenter_2D_interception_semi.cpython-310.pyc
  File "/workspace/BMI/install/state_reader/lib/python3.10/site-packages/state_reader/psychopy_presenter_2D_interception_semi.py", line 270
    if training_flag[0]==1
                          ^
SyntaxError: expected ':'

running install_data
running install_egg_info
removing '/workspace/BMI/install/state_reader/lib/python3.10/site-packages/state_reader-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/state_reader/state_reader.egg-info to /workspace/BMI/install/state_reader/lib/python3.10/site-packages/state_reader-0.0.0-py3.10.egg-info
running install_scripts
Installing monkeylogic_server script to /workspace/BMI/install/state_reader/lib/state_reader
Installing psychopy_1D_center_out script to /workspace/BMI/install/state_reader/lib/state_reader
Installing psychopy_2D_center_out script to /workspace/BMI/install/state_reader/lib/state_reader
Installing psychopy_2D_interception script to /workspace/BMI/install/state_reader/lib/state_reader
Installing psychopy_2D_semi_interception script to /workspace/BMI/install/state_reader/lib/state_reader
writing list of installed files to '/workspace/BMI/build/state_reader/install.log'
